--- a/code-along.html
+++ b/code-along.html
@@ -13,17 +13,17 @@
          <!-- Instructions: go through the code and update the tags so the formatting makes sense. -->
         <header>
             <!-- 1. This should be a header! -->
-            <p>The Beauty of Nature</p>
+            <h1 style="text-align: center;">The Beauty of Nature</h1>
         </header>
         <main>
             <section>
-                <h2>Introduction</h2>
+                <h2 style="text-align: center;">Introduction</h2>
                 <!-- 2. This font is too big - looks like it should be a paragraph. -->
-                <h2>Nature is one of the most beautiful and fascinating things in the world. From the smallest insect to the largest mountain, there is something awe-inspiring about the natural world that surrounds us.</h2>
+                <p>Nature is one of the most beautiful and fascinating things in the world. From the smallest insect to the largest mountain, there is something awe-inspiring about the natural world that surrounds us.</p>
             </section>
 
             <section>
-                <h2>The Calming Influence of Nature</h2>
+                <h2 style="text-align: center;">The Calming Influence of Nature</h2>
                 <p>One of the things that makes nature so special is its ability to provide us with a sense of peace and tranquility. When we're surrounded by nature, we often feel more relaxed and at ease, as if all the stresses and worries of everyday life have disappeared.</p>
                 <img src="https://i.ytimg.com/vi/BbXPd8SR_64/maxresdefault.jpg" alt="A peaceful beach">
                 <p>Studies have shown that spending time in nature can have a positive impact on our mental health and well-being. Whether it's taking a walk in the park, going for a hike in the mountains, or simply sitting outside and enjoying the fresh air, being in nature can help us feel more calm and centered.</p>
@@ -31,17 +31,18 @@
 
             <section>
                 <!-- 3. This is a header, but it's a little off. -->
-                <h1>The Power of Nature</h1>
+                <h1 style="text-align: center;">The Power of Nature</h1>
                 <p>But nature is not just beautiful and calming; it is also incredibly powerful and awe-inspiring. From thunderstorms and hurricanes to volcanoes and earthquakes, nature has the ability to remind us of its immense power and the importance of respecting and protecting our planet.</p>
                 <img src="https://s.abcnews.com/images/International/hurricane-irma-rt-1-er-170906_16x9_992.jpg" alt="A powerful hurricane">
                 <p>While these natural phenomena can be frightening and destructive, they also serve as a reminder of the incredible forces that shape our planet and our lives. By understanding and appreciating the power of nature, we can learn to live in harmony with the environment and protect it for future generations.</p>
             </section>
             <section>
-                <h2>The Importance of Preserving Nature</h2>
+                <h2 style="text-align: center;">The Importance of Preserving Nature</h2>
                 <p>As we continue to face environmental challenges like climate change and deforestation, it is more important than ever that we work to protect and preserve the natural world. By doing so, we can ensure that future generations will be able to experience the same sense of wonder and awe that we feel when we're surrounded by the beauty of nature.</p>
             </section>
         </main>
         <!-- 4. We want more space here - what tag could we add? -->
+        <br>
         <footer>
             <p>Written by ChatGPT</p>
         </footer>
