--- a/code-solo.html
+++ b/code-solo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- 1. Change the title to My Practice Page or a title you think is better - your pick. -->
-    <title>Code Solo</title>
+    <title>My Practice Page</title>
 </head>
 <body>
     <!-- nav bar -->
@@ -14,16 +14,26 @@
 
 
     <!-- 2. Add the biggest header tag and make the content your name. -->
-
+      <h1>Matthew Titzer</h1>
     <!-- 3. Add another header tag, but make it smaller. Make the content say "Bio" (do not include the quotes)-->
-
+      <h2>Bio</h2>
     <!-- 4. Add a paragraph tag. For the content, write 6 short sentences about yourself. -->
-
+      <p>I was born in Newburgh, Indiana. I am currently 18 yrs old. My favorite color is green. I will be a freshman at Purdue in the fall.</p>
     <!-- 5. After the third sentence in your bio, add a break tag. -->
-
+      <br>
     <!-- Challenge: go to this link in your browser: https://www.w3schools.com/tags/ref_byfunc.asp 
         and try adding an unordered list. Include a couple list items of things you like. -->
-
+      <ul>
+        <li>
+          <p>The Outdoors</p>
+        </li>
+        <li>
+          <p>Music</p>
+        </li>
+        <li>
+          <p>Cycling</p>
+        </li>
+      </ul>
 </body>
 
 
